    given().contentType("multipart/mixed; boundary=abcdef").multiPart(..). ..
  which will use the specified boundary of "abcdef" instead of generating a "random" one. It's also possible to specify a default boundary
  in the MultiPartConfig:
    given().config(config().multiPartConfig(multiPartConfig().defaultBoundary("abcdef"))). ..
  (issue 670)

Change log 2.9.0 (2016-03-04)
-----------------------------
* Added support for composing a Hamcrest matcher with a ResponseAwareMatcher when using a ResponseAwareMatcherComposer
* Automatically escapes JsonPath and XmlPath fragments that contains a hyphen and an index lookup operator. For example consider the following JSON document:
    { "some-list" : ["one", "two"] }
  Previously you had to escape "some-list" manually if you wanted to get first element out of the list:
    JsonPath jsonPath = ...
    String firstElement = jsonPath.getString("'some-list'[0]"); // one
  Now no explicit escaping is necessary:
    String firstElement = jsonPath.getString("some-list[0]"); // one
  But this means that if you previously had a JSON document like this:
    { "some-list[0]" : ["one", "two"] }
  you would now have to escape it:
    String firstElement = jsonPath.getString("'some-list[0]'[0]"); // one
  which makes this an (unlikely but still) non-backward compatible change (issue 564).
* Added support for multipart DELETE requests (issue 634)
* It's now possible to use empty and whitespace path parameters (issue 631)
* Replace deprecated HttpEntity.consume with EntityUtils.consume to fix problems with connections not closing properly (issue 633) (thanks to Marin Dzhigarov and Julian Engelhardt for help and PR)
* Fixing NullPointerException for GET requests with an empty body (issue 642)
* Form authentication for fully-qualified URIs now uses the URI specified in the request instead of just localhost (issue 641)